# CanaryRender

./: .gitignore  CMakeLists.txt  main.cpp
ModelZoo/bunny/: option.txt
ModelZoo/spot/: option.txt
ModelZoo/tiger/: option.txt
src/: base.h  base_global.cpp  base_global.h  bvh.h  m_texture.cpp  m_texture.h  material.cpp  material.h  obj_lod.h  obj_transform.cpp  obj_transform.h  object.cpp  object.h  rasterization.cpp  rasterization.h  ray_trace.cpp  ray_trace.h  scene.cpp  scene.h  shader.cpp  shader.h  triangle.cpp  triangle.h
src/phaser/: OBJ_Loader.cpp  OBJ_Loader.h  argument_phaser.cpp  argument_phaser.h  cfg_phaser.cpp  cfg_phaser.h
src/rasRenderer/: base.h  m_texture.cpp  obj_lod.cpp  obj_transform.cpp  obj_transform.h  object.h  ras_anti_aliasing.cpp  ras_anti_aliasing.h  rasterization.cpp  rasterization.h  scene.cpp  scene.h  shader.cpp  shader.h  triangle.cpp  triangle.h
src/rayRenderer/: Light.cpp  Light.h  Ray.cpp  Ray.h  RayTraceRenderer.cpp  RayTraceRenderer.h  base_rt.cpp  base_rt.h  bvh.cpp  bvh.h  object_ray.cpp  object_ray.h  sah.cpp  sah.h
